--- a/deploying_ansible/ansible_playbook.yaml
+++ b/deploying_ansible/ansible_playbook.yaml
@@ -58,7 +58,7 @@
 
     - name: Copy config directory
       copy:
-        src: "{{ playbook_dir }}/biap-client-node-js/config"
+        src: "{{ playbook_dir }}/configurations/biap-client-node-js/config"
         dest: "/home/{{ user }}/ONDC/project/biap-client-node-js/"
         owner: "{{ user }}"
         group: "{{ user }}"
@@ -66,7 +66,7 @@
 
     - name: Copy config directory for igm
       copy:
-        src: "{{ playbook_dir }}/biap-igm-node-js/config"
+        src: "{{ playbook_dir }}/configurations/biap-igm-node-js/config"
         dest: "/home/{{ user }}/ONDC/project/biap-igm-node-js/"
         owner: "{{ user }}"
         group: "{{ user }}"
@@ -74,7 +74,7 @@
 
     - name: Copy lets encrypt with domain replaced
       copy:
-        src: "{{ playbook_dir }}/Configurations/init-letsencrypt.sh"
+        src: "{{ playbook_dir }}/configurations/init-letsencrypt.sh"
         dest: "/home/{{ user }}/ONDC/project/init-letsencrypt.sh"
         owner: "{{ user }}"
         group: "{{ user }}"
@@ -88,7 +88,7 @@
 
     - name: copy Dockerfile without SSL as dockerfile in biap-app-ui-front
       copy:
-        src: "{{ playbook_dir }}/biap-app-ui-front/DockerfileWithoutSSL"
+        src: "{{ playbook_dir }}/configurations/biap-app-ui-front/DockerfileWithoutSSL"
         dest: "/home/{{ user }}/ONDC/project/biap-app-ui-front/Dockerfile"
         owner: "{{ user }}"
         group: "{{ user }}"
@@ -96,7 +96,7 @@
         
     - name: copy nginx-replace-with-domain.conf in biap-app-ui-front
       copy:
-        src: "{{ playbook_dir }}/biap-app-ui-front/nginx-replace-with-domain.conf"
+        src: "{{ playbook_dir }}/configurations/biap-app-ui-front/nginx-replace-with-domain.conf"
         dest: "/home/{{ user }}/ONDC/project/biap-app-ui-front/nginx-replace-with-domain.conf"
         owner: "{{ user }}"
         group: "{{ user }}"
@@ -115,7 +115,7 @@
 
     - name: copy env file with domain replaced
       copy:
-        src: "{{ playbook_dir }}/Configurations/.env{{ envtype }}"
+        src: "{{ playbook_dir }}/configurations/.env{{ envtype }}"
         dest: "/home/{{ user }}/ONDC/project/.env"
         owner: "{{ user }}"
         group: "{{ user }}"
@@ -129,7 +129,7 @@
 
     - name: Copy docker-compose file into project
       copy:
-        src: "{{ playbook_dir }}/Configurations/docker-compose.yml"
+        src: "{{ playbook_dir }}/configurations/docker-compose.yml"
         dest: "/home/{{ user }}/ONDC/project/docker-compose.yml"
         owner: "{{ user }}"
         group: "{{ user }}"
@@ -137,11 +137,8 @@
         
     - name: Copy docker-compose-ssl file into project
       copy:
-        src: "{{ playbook_dir }}/Configurations/docker-compose-ssl.yml"
+        src: "{{ playbook_dir }}/configurations/docker-compose-ssl.yml"
         dest: "/home/{{ user }}/ONDC/project/docker-compose-ssl.yml"
         owner: "{{ user }}"
         group: "{{ user }}"
         mode: "0755"
-        
-    - name: run letsencrypt
-      shell: "sudo mv ./ONDC/Configurations/grafana.ini /var && sudo mv ./ONDC/Configurations/local-config.yaml /var"
