--- a/deploying_ansible/ansible_playbook.yaml
+++ b/deploying_ansible/ansible_playbook.yaml
@@ -115,8 +115,14 @@
     - name: replace nginx.conf with nginx-replace-with-domain.conf
       replace:
         path: "/home/{{ user }}/ONDC/project/biap-app-ui-front/Dockerfile"
-        regexp: "nginx.conf"
-        replace: "nginx-replace-with-domain.conf"
+        regexp: "COPY nginx.conf /etc/nginx/conf.d/default.conf"
+        replace: "COPY nginx-replace-with-domain.conf /etc/nginx/conf.d/default.conf"
+
+    - name: replace port 3000 to 5000 in location /api/payment/ > nginx-without-ssl.conf
+      replace:
+        path: "/home/{{ user }}/ONDC/project/biap-app-ui-front/nginx-without-ssl.conf"
+        regexp: "3000"
+        replace: "5000"
 
     - name: Copy docker-compose file into project
       copy:
